--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "lint": "eslint src/**/*.{js,jsx,ts,tsx}"
   },
   "dependencies": {
+    "big.js": "^6.2.2",
     "lodash-es": "^4.17.21",
     "pinia": "^2.3.0",
     "pixi.js": "^8.5.2",
+    "three": "^0.173.0",
     "uuid": "^11.0.3",
     "vue": "^3.5.13"
   },
@@ -15,6 +17,7 @@
     "@eslint/js": "^9.17.0",
     "@rspack/cli": "^1.1.0",
     "@rspack/core": "^1.1.0",
+    "@types/three": "^0.173.0",
     "eslint": "^9.17.0",
     "eslint-plugin-vue": "^9.32.0",
     "globals": "^15.14.0",
